app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  selector:
    app: app2
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
